add message request | add new rules eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,19 +5,19 @@
     },
     "extends": [
         "plugin:react/recommended",
-        "standard-with-typescript"
+        "standard-with-typescript",
+        "plugin:react-hooks/recommended"
     ],
-    "overrides": [
-    ],
+    "overrides": [],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module",
-        "project": ["./tsconfig.json"]
+        "project": [
+            "./tsconfig.json"
+        ]
     },
     "plugins": [
         "react"
     ],
-    "rules": {
-        
-    }
+    "rules": {}
 }
