--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.0.6",
     "axios": "^1.1.2",
     "classnames": "^2.3.2",
+    "emoji-picker-react": "^4.4.5",
     "react": "^18.2.0",
     "react-content-loader": "^6.2.0",
     "react-dom": "^18.2.0",
