--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.11.62",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "@types/webrtc": "^0.0.33",
     "axios": "^1.1.2",
     "classnames": "^2.3.2",
     "emoji-picker-react": "^4.4.5",
